--- a/vesc_ackermann/CMakeLists.txt
+++ b/vesc_ackermann/CMakeLists.txt
@@ -11,11 +11,16 @@ elseif("${CMAKE_CXX_STANDARD_COMPUTED_DEFAULT}" STREQUAL "98")
 endif()
 
 find_package(ament_cmake_auto REQUIRED)
+find_package(ackermann_msgs REQUIRED)
 ament_auto_find_build_dependencies()
 
 ###########
 ## Build ##
 ###########
+
+ament_target_dependencies(${PROJECT_NAME}
+  ackermann_msgs
+)
 
 # nodes library
 ament_auto_add_library(${PROJECT_NAME} SHARED
